:bug: Fix link to css file

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<title>Jember Job Fair 2023</title>
 
 		<!-- Tailwind CSS -->
-		<!-- <link href="/dist/output.css" rel="stylesheet" /> -->
-		<link href="/dist/build.css" rel="stylesheet" />
+		<!-- <link href="./dist/output.css" rel="stylesheet" /> -->
+		<link href="./dist/build.css" rel="stylesheet" />
 
 		<!-- Job fair dummy data -->
 		<script src="data.js"></script>
