:sparkles: Add author and repitory link
fix typo readme.md

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 					</div>
 
 					<!-- Greeting -->
-					<div class="text-4xl md:text-6xl font-bold mb-4 flex flex-col md:flex-row gap-4">
+					<div
+						class="text-4xl md:text-6xl font-bold mb-4 flex flex-col md:flex-row gap-4"
+					>
 						<span class="">
 							<img
 								src="./assets/images/logo.png"
@@ -107,8 +109,8 @@
 
 		<!-- Footer -->
 		<footer class="footer items-center p-4 bg-neutral text-neutral-content">
-			<div class="container mx-auto">
-				<div class="flex items-center gap-4">
+			<div class="container mx-auto w-full flex flex-col gap-6 md:flex-row justify-between items-start md:items-center">
+				<div class="flex gap-4 items-center order-2 md:order-1">
 					<svg
 						width="36"
 						height="36"
@@ -123,6 +125,22 @@
 						></path>
 					</svg>
 					<p>Copyright © 2023 - All right reserved</p>
+				</div>
+
+				<div class="flex flex-row gap-2 order-1 md:order-2">
+					<a
+						href="https://alifirhas.github.io/"
+						class="italic underline"
+						target="_blank"
+						>@alifirhas</a
+					>
+					<span>/</span>
+					<a
+						href="https://github.com/alifirhas/jember_job_fair_2023"
+						target="_blank"
+						class="italic underline"
+						>jember_job_fair_2023</a
+					>
 				</div>
 			</div>
 		</footer>
